--- a/XxAbthedevxX/103194-the-golden-puddle-a-medieval-adventure-of-unrestricted-release/rus.textile
+++ b/XxAbthedevxX/103194-the-golden-puddle-a-medieval-adventure-of-unrestricted-release/rus.textile
@@ -1,226 +1,226 @@
 The Golden Puddle: A Medieval Adventure of Unrestricted Release
 
-Автор: XxAbthedevxX
+РђРІС‚РѕСЂ: XxAbthedevxX
 
 *000*2024-07-21 20:40
 
-Эй, это моя первая история на этом сайте и первая история омо, которую я когда-либо пис%л, так что она не будет лучшей, но всё равно что-то, эта история объединяет многие из моих главных фетишей в один пакет по сути омо-порно, надеюсь, вам понравится, я старался быть причудливым и немного поработать над построением мира в этой истории, дайте мне знать, если вы хотите что-то добавить или улучшить
+Р­Р№, СЌС‚Рѕ РјРѕСЏ РїРµСЂРІР°СЏ РёСЃС‚РѕСЂРёСЏ РЅР° СЌС‚РѕРј СЃР°Р№С‚Рµ Рё РїРµСЂРІР°СЏ РёСЃС‚РѕСЂРёСЏ РѕРјРѕ, РєРѕС‚РѕСЂСѓСЋ СЏ РєРѕРіРґР°-Р»РёР±Рѕ РїРёСЃ%Р», С‚Р°Рє С‡С‚Рѕ РѕРЅР° РЅРµ Р±СѓРґРµС‚ Р»СѓС‡С€РµР№, РЅРѕ РІСЃС‘ СЂР°РІРЅРѕ С‡С‚Рѕ-С‚Рѕ, СЌС‚Р° РёСЃС‚РѕСЂРёСЏ РѕР±СЉРµРґРёРЅСЏРµС‚ РјРЅРѕРіРёРµ РёР· РјРѕРёС… РіР»Р°РІРЅС‹С… С„РµС‚РёС€РµР№ РІ РѕРґРёРЅ РїР°РєРµС‚ РїРѕ СЃСѓС‚Рё РѕРјРѕ-РїРѕСЂРЅРѕ, РЅР°РґРµСЋСЃСЊ, РІР°Рј РїРѕРЅСЂР°РІРёС‚СЃСЏ, СЏ СЃС‚Р°СЂР°Р»СЃСЏ Р±С‹С‚СЊ РїСЂРёС‡СѓРґР»РёРІС‹Рј Рё РЅРµРјРЅРѕРіРѕ РїРѕСЂР°Р±РѕС‚Р°С‚СЊ РЅР°Рґ РїРѕСЃС‚СЂРѕРµРЅРёРµРј РјРёСЂР° РІ СЌС‚РѕР№ РёСЃС‚РѕСЂРёРё, РґР°Р№С‚Рµ РјРЅРµ Р·РЅР°С‚СЊ, РµСЃР»Рё РІС‹ С…РѕС‚РёС‚Рµ С‡С‚Рѕ-С‚Рѕ РґРѕР±Р°РІРёС‚СЊ РёР»Рё СѓР»СѓС‡С€РёС‚СЊ
 
-ВНИМАНИЕ, ЭТА ИСТОРИЯ СОДЕРЖИТ ОБНАЖЁННОСТЬ
+Р’РќРРњРђРќРР•, Р­РўРђ РРЎРўРћР РРЇ РЎРћР”Р•Р Р–РРў РћР‘РќРђР–РЃРќРќРћРЎРўР¬
 
-ВСЕ ПЕРСОНАЖИ 18+ УКАЗАНО ИЛИ НЕТ
+Р’РЎР• РџР•Р РЎРћРќРђР–Р 18+ РЈРљРђР—РђРќРћ РР›Р РќР•Рў
 
-ВКЛЮЧЕНЫ ИЗОБРАЖЕНИЯ, СГЕНЕРИРОВАННЫЕ ИИ
+Р’РљР›Р®Р§Р•РќР« РР—РћР‘Р РђР–Р•РќРРЇ, РЎР“Р•РќР•Р РР РћР’РђРќРќР«Р• РР
 
-Это будет пролог и глава 1. Я ещё не напис%л больше, жду отзывов о том, как продолжить
-
-###
-
-Предпосылка
-
-Арон всегда был очарован женщинами с большим мочевым пузырём. Ему нравилось смотреть, как они сдерживают его, чувствуя, как нарастает давление, прежде чем, наконец, выпустить мощную струю мочи. Он и не подозревал, что его одержимость приведёт его к неожиданному путешествию.
-
-После трагического случая Арон оказался перевоплощённым в принца королевства в фантастическом мире, где женщины свободно и без всякого стыда мочатся.
-
-Его сестра принцесса Амелия была одной из таких женщин, хвастаясь размером мочевого пузыря, который мог бы соперничать даже с самой большой бочкой.
-
-Арон в восторге от этой новой среды, где его желания не только принимаются, но и приветствуются. Он наслаждается наблюдением за тем, как девушки мочатся открыто и без колебаний, демонстрируя свои невероятные таланты сдерживания мочи.
-
-Это только разжигает желания Арона ещё больше, и он решает увидеть, как каждая женщина выпускает свой золотой поток с грацией и уверенностью. С эльфами, танцующими в лесах, и ангелами, благословляющими каждый уголок королевства, рядом с иностранными принцессами, украшающими придворные мероприятия, и святой Эрикой, ведущей женщин-священников в духовные поиски вместе с магами, творящими заклинания магии, — путешествие Арона в этот фантастический мир наполнено волнением, не похожим ни на что, что он когда-либо представлял.
-
-Он наслаждается, наблюдая, как они испражняются, и находит способы сдерживать это долгое время, прежде чем, наконец, поддаться освобождению. Он потакает своим желаниям, наблюдая, как эти женщины испражняются с лёгкостью и грацией. Его волнение не знает границ, поскольку он воочию убедился в силе их отточенного контроля над мочевым пузырём.
-
-Вид густых потоков мочи и впечатляющих вздутий мочевого пузыря стал обычным явлением для Арона, когда он принял эту новую жизнь, полную приключений и волнения.
+Р­С‚Рѕ Р±СѓРґРµС‚ РїСЂРѕР»РѕРі Рё РіР»Р°РІР° 1. РЇ РµС‰С‘ РЅРµ РЅР°РїРёСЃ%Р» Р±РѕР»СЊС€Рµ, Р¶РґСѓ РѕС‚Р·С‹РІРѕРІ Рѕ С‚РѕРј, РєР°Рє РїСЂРѕРґРѕР»Р¶РёС‚СЊ
 
 ###
 
-Пролог
+РџСЂРµРґРїРѕСЃС‹Р»РєР°
 
-На оживлённой рыночной улице, в сцене, нетронутой временем, молодой человек не старше 21 года с большим интересом наблюдает за сценой
+РђСЂРѕРЅ РІСЃРµРіРґР° Р±С‹Р» РѕС‡Р°СЂРѕРІР°РЅ Р¶РµРЅС‰РёРЅР°РјРё СЃ Р±РѕР»СЊС€РёРј РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј. Р•РјСѓ РЅСЂР°РІРёР»РѕСЃСЊ СЃРјРѕС‚СЂРµС‚СЊ, РєР°Рє РѕРЅРё СЃРґРµСЂР¶РёРІР°СЋС‚ РµРіРѕ, С‡СѓРІСЃС‚РІСѓСЏ, РєР°Рє РЅР°СЂР°СЃС‚Р°РµС‚ РґР°РІР»РµРЅРёРµ, РїСЂРµР¶РґРµ С‡РµРј, РЅР°РєРѕРЅРµС†, РІС‹РїСѓСЃС‚РёС‚СЊ РјРѕС‰РЅСѓСЋ СЃС‚СЂСѓСЋ РјРѕС‡Рё. РћРЅ Рё РЅРµ РїРѕРґРѕР·СЂРµРІР°Р», С‡С‚Рѕ РµРіРѕ РѕРґРµСЂР¶РёРјРѕСЃС‚СЊ РїСЂРёРІРµРґС‘С‚ РµРіРѕ Рє РЅРµРѕР¶РёРґР°РЅРЅРѕРјСѓ РїСѓС‚РµС€РµСЃС‚РІРёСЋ.
 
-«Сдавайся! Элиана, ты выглядишь так, будто готова лопнуть, просто пописить и признать поражение, этот мужчина мой!» (Лия)
+РџРѕСЃР»Рµ С‚СЂР°РіРёС‡РµСЃРєРѕРіРѕ СЃР»СѓС‡Р°СЏ РђСЂРѕРЅ РѕРєР°Р·Р°Р»СЃСЏ РїРµСЂРµРІРѕРїР»РѕС‰С‘РЅРЅС‹Рј РІ РїСЂРёРЅС†Р° РєРѕСЂРѕР»РµРІСЃС‚РІР° РІ С„Р°РЅС‚Р°СЃС‚РёС‡РµСЃРєРѕРј РјРёСЂРµ, РіРґРµ Р¶РµРЅС‰РёРЅС‹ СЃРІРѕР±РѕРґРЅРѕ Рё Р±РµР· РІСЃСЏРєРѕРіРѕ СЃС‚С‹РґР° РјРѕС‡Р°С‚СЃСЏ.
 
-«Посмотрите, кто говорит, ведёт себя высокомерно и могущественно, хотя ты сжимала себя всего несколько минут назад, он мой, чтобы заявить права на него». (Элиана)
+Р•РіРѕ СЃРµСЃС‚СЂР° РїСЂРёРЅС†РµСЃСЃР° РђРјРµР»РёСЏ Р±С‹Р»Р° РѕРґРЅРѕР№ РёР· С‚Р°РєРёС… Р¶РµРЅС‰РёРЅ, С…РІР°СЃС‚Р°СЏСЃСЊ СЂР°Р·РјРµСЂРѕРј РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ, РєРѕС‚РѕСЂС‹Р№ РјРѕРі Р±С‹ СЃРѕРїРµСЂРЅРёС‡Р°С‚СЊ РґР°Р¶Рµ СЃ СЃР°РјРѕР№ Р±РѕР»СЊС€РѕР№ Р±РѕС‡РєРѕР№.
 
-(Лия)
+РђСЂРѕРЅ РІ РІРѕСЃС‚РѕСЂРіРµ РѕС‚ СЌС‚РѕР№ РЅРѕРІРѕР№ СЃСЂРµРґС‹, РіРґРµ РµРіРѕ Р¶РµР»Р°РЅРёСЏ РЅРµ С‚РѕР»СЊРєРѕ РїСЂРёРЅРёРјР°СЋС‚СЃСЏ, РЅРѕ Рё РїСЂРёРІРµС‚СЃС‚РІСѓСЋС‚СЃСЏ. РћРЅ РЅР°СЃР»Р°Р¶РґР°РµС‚СЃСЏ РЅР°Р±Р»СЋРґРµРЅРёРµРј Р·Р° С‚РµРј, РєР°Рє РґРµРІСѓС€РєРё РјРѕС‡Р°С‚СЃСЏ РѕС‚РєСЂС‹С‚Рѕ Рё Р±РµР· РєРѕР»РµР±Р°РЅРёР№, РґРµРјРѕРЅСЃС‚СЂРёСЂСѓСЏ СЃРІРѕРё РЅРµРІРµСЂРѕСЏС‚РЅС‹Рµ С‚Р°Р»Р°РЅС‚С‹ СЃРґРµСЂР¶РёРІР°РЅРёСЏ РјРѕС‡Рё.
 
-(Элиана)
+Р­С‚Рѕ С‚РѕР»СЊРєРѕ СЂР°Р·Р¶РёРіР°РµС‚ Р¶РµР»Р°РЅРёСЏ РђСЂРѕРЅР° РµС‰С‘ Р±РѕР»СЊС€Рµ, Рё РѕРЅ СЂРµС€Р°РµС‚ СѓРІРёРґРµС‚СЊ, РєР°Рє РєР°Р¶РґР°СЏ Р¶РµРЅС‰РёРЅР° РІС‹РїСѓСЃРєР°РµС‚ СЃРІРѕР№ Р·РѕР»РѕС‚РѕР№ РїРѕС‚РѕРє СЃ РіСЂР°С†РёРµР№ Рё СѓРІРµСЂРµРЅРЅРѕСЃС‚СЊСЋ. РЎ СЌР»СЊС„Р°РјРё, С‚Р°РЅС†СѓСЋС‰РёРјРё РІ Р»РµСЃР°С…, Рё Р°РЅРіРµР»Р°РјРё, Р±Р»Р°РіРѕСЃР»РѕРІР»СЏСЋС‰РёРјРё РєР°Р¶РґС‹Р№ СѓРіРѕР»РѕРє РєРѕСЂРѕР»РµРІСЃС‚РІР°, СЂСЏРґРѕРј СЃ РёРЅРѕСЃС‚СЂР°РЅРЅС‹РјРё РїСЂРёРЅС†РµСЃСЃР°РјРё, СѓРєСЂР°С€Р°СЋС‰РёРјРё РїСЂРёРґРІРѕСЂРЅС‹Рµ РјРµСЂРѕРїСЂРёСЏС‚РёСЏ, Рё СЃРІСЏС‚РѕР№ Р­СЂРёРєРѕР№, РІРµРґСѓС‰РµР№ Р¶РµРЅС‰РёРЅ-СЃРІСЏС‰РµРЅРЅРёРєРѕРІ РІ РґСѓС…РѕРІРЅС‹Рµ РїРѕРёСЃРєРё РІРјРµСЃС‚Рµ СЃ РјР°РіР°РјРё, С‚РІРѕСЂСЏС‰РёРјРё Р·Р°РєР»РёРЅР°РЅРёСЏ РјР°РіРёРё, вЂ” РїСѓС‚РµС€РµСЃС‚РІРёРµ РђСЂРѕРЅР° РІ СЌС‚РѕС‚ С„Р°РЅС‚Р°СЃС‚РёС‡РµСЃРєРёР№ РјРёСЂ РЅР°РїРѕР»РЅРµРЅРѕ РІРѕР»РЅРµРЅРёРµРј, РЅРµ РїРѕС…РѕР¶РёРј РЅРё РЅР° С‡С‚Рѕ, С‡С‚Рѕ РѕРЅ РєРѕРіРґР°-Р»РёР±Рѕ РїСЂРµРґСЃС‚Р°РІР»СЏР».
 
-Он наблюдает вместе со многими зрителями, собравшимися, чтобы стать свидетелями последних моментов этой битвы, казалось бы, обычного зрелища в этих землях.
+РћРЅ РЅР°СЃР»Р°Р¶РґР°РµС‚СЃСЏ, РЅР°Р±Р»СЋРґР°СЏ, РєР°Рє РѕРЅРё РёСЃРїСЂР°Р¶РЅСЏСЋС‚СЃСЏ, Рё РЅР°С…РѕРґРёС‚ СЃРїРѕСЃРѕР±С‹ СЃРґРµСЂР¶РёРІР°С‚СЊ СЌС‚Рѕ РґРѕР»РіРѕРµ РІСЂРµРјСЏ, РїСЂРµР¶РґРµ С‡РµРј, РЅР°РєРѕРЅРµС†, РїРѕРґРґР°С‚СЊСЃСЏ РѕСЃРІРѕР±РѕР¶РґРµРЅРёСЋ. РћРЅ РїРѕС‚Р°РєР°РµС‚ СЃРІРѕРёРј Р¶РµР»Р°РЅРёСЏРј, РЅР°Р±Р»СЋРґР°СЏ, РєР°Рє СЌС‚Рё Р¶РµРЅС‰РёРЅС‹ РёСЃРїСЂР°Р¶РЅСЏСЋС‚СЃСЏ СЃ Р»С‘РіРєРѕСЃС‚СЊСЋ Рё РіСЂР°С†РёРµР№. Р•РіРѕ РІРѕР»РЅРµРЅРёРµ РЅРµ Р·РЅР°РµС‚ РіСЂР°РЅРёС†, РїРѕСЃРєРѕР»СЊРєСѓ РѕРЅ РІРѕРѕС‡РёСЋ СѓР±РµРґРёР»СЃСЏ РІ СЃРёР»Рµ РёС… РѕС‚С‚РѕС‡РµРЅРЅРѕРіРѕ РєРѕРЅС‚СЂРѕР»СЏ РЅР°Рґ РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј.
 
-Проходят минуты, пока дамы держатся за большой поток, превзойдя физические пределы, они держатся одной лишь волей.
+Р’РёРґ РіСѓСЃС‚С‹С… РїРѕС‚РѕРєРѕРІ РјРѕС‡Рё Рё РІРїРµС‡Р°С‚Р»СЏСЋС‰РёС… РІР·РґСѓС‚РёР№ РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ СЃС‚Р°Р» РѕР±С‹С‡РЅС‹Рј СЏРІР»РµРЅРёРµРј РґР»СЏ РђСЂРѕРЅР°, РєРѕРіРґР° РѕРЅ РїСЂРёРЅСЏР» СЌС‚Сѓ РЅРѕРІСѓСЋ Р¶РёР·РЅСЊ, РїРѕР»РЅСѓСЋ РїСЂРёРєР»СЋС‡РµРЅРёР№ Рё РІРѕР»РЅРµРЅРёСЏ.
 
-«Ну, это никуда не денется, позвольте мне ускорить это, дамы, смотрите! Хотите сделать это?» (Прохожая леди)
+###
 
-*Псссссссс*
+РџСЂРѕР»РѕРі
 
-«Ооо, держу это с утра… Аааа» (Леди)
+РќР° РѕР¶РёРІР»С‘РЅРЅРѕР№ СЂС‹РЅРѕС‡РЅРѕР№ СѓР»РёС†Рµ, РІ СЃС†РµРЅРµ, РЅРµС‚СЂРѕРЅСѓС‚РѕР№ РІСЂРµРјРµРЅРµРј, РјРѕР»РѕРґРѕР№ С‡РµР»РѕРІРµРє РЅРµ СЃС‚Р°СЂС€Рµ 21 РіРѕРґР° СЃ Р±РѕР»СЊС€РёРј РёРЅС‚РµСЂРµСЃРѕРј РЅР°Р±Р»СЋРґР°РµС‚ Р·Р° СЃС†РµРЅРѕР№
 
-*Псссссс*
+В«РЎРґР°РІР°Р№СЃСЏ! Р­Р»РёР°РЅР°, С‚С‹ РІС‹РіР»СЏРґРёС€СЊ С‚Р°Рє, Р±СѓРґС‚Рѕ РіРѕС‚РѕРІР° Р»РѕРїРЅСѓС‚СЊ, РїСЂРѕСЃС‚Рѕ РїРѕРїРёСЃРёС‚СЊ Рё РїСЂРёР·РЅР°С‚СЊ РїРѕСЂР°Р¶РµРЅРёРµ, СЌС‚РѕС‚ РјСѓР¶С‡РёРЅР° РјРѕР№!В» (Р›РёСЏ)
 
-Леди с впечатляющей собственной мочой насмехается над конкурентами, которые с тоской наблюдают за её освобождением.
+В«РџРѕСЃРјРѕС‚СЂРёС‚Рµ, РєС‚Рѕ РіРѕРІРѕСЂРёС‚, РІРµРґС‘С‚ СЃРµР±СЏ РІС‹СЃРѕРєРѕРјРµСЂРЅРѕ Рё РјРѕРіСѓС‰РµСЃС‚РІРµРЅРЅРѕ, С…РѕС‚СЏ С‚С‹ СЃР¶РёРјР°Р»Р° СЃРµР±СЏ РІСЃРµРіРѕ РЅРµСЃРєРѕР»СЊРєРѕ РјРёРЅСѓС‚ РЅР°Р·Р°Рґ, РѕРЅ РјРѕР№, С‡С‚РѕР±С‹ Р·Р°СЏРІРёС‚СЊ РїСЂР°РІР° РЅР° РЅРµРіРѕВ». (Р­Р»РёР°РЅР°)
 
-Две дамы включаются, когда моча дамы высыхает
+(Р›РёСЏ)
 
-Спустя всего несколько минут затруднённое дыхание блондинки переходит в ругательства, когда она кончает на пол, всё ещё пытаясь удержаться
+(Р­Р»РёР°РЅР°)
 
-«Бл… нет, нет, нет, я не могу…» (Лия)
+РћРЅ РЅР°Р±Р»СЋРґР°РµС‚ РІРјРµСЃС‚Рµ СЃРѕ РјРЅРѕРіРёРјРё Р·СЂРёС‚РµР»СЏРјРё, СЃРѕР±СЂР°РІС€РёРјРёСЃСЏ, С‡С‚РѕР±С‹ СЃС‚Р°С‚СЊ СЃРІРёРґРµС‚РµР»СЏРјРё РїРѕСЃР»РµРґРЅРёС… РјРѕРјРµРЅС‚РѕРІ СЌС‚РѕР№ Р±РёС‚РІС‹, РєР°Р·Р°Р»РѕСЃСЊ Р±С‹, РѕР±С‹С‡РЅРѕРіРѕ Р·СЂРµР»РёС‰Р° РІ СЌС‚РёС… Р·РµРјР»СЏС….
 
-Кажется, она пытается остановить неизбежное, но её сфинктер больше не выдерживает
+РџСЂРѕС…РѕРґСЏС‚ РјРёРЅСѓС‚С‹, РїРѕРєР° РґР°РјС‹ РґРµСЂР¶Р°С‚СЃСЏ Р·Р° Р±РѕР»СЊС€РѕР№ РїРѕС‚РѕРє, РїСЂРµРІР·РѕР№РґСЏ С„РёР·РёС‡РµСЃРєРёРµ РїСЂРµРґРµР»С‹, РѕРЅРё РґРµСЂР¶Р°С‚СЃСЏ РѕРґРЅРѕР№ Р»РёС€СЊ РІРѕР»РµР№.
 
-*PPPSSSSSSSSSSSSSSSPPPPPPPPPPPPPPPPPPPPPP* (Лия)
+В«РќСѓ, СЌС‚Рѕ РЅРёРєСѓРґР° РЅРµ РґРµРЅРµС‚СЃСЏ, РїРѕР·РІРѕР»СЊС‚Рµ РјРЅРµ СѓСЃРєРѕСЂРёС‚СЊ СЌС‚Рѕ, РґР°РјС‹, СЃРјРѕС‚СЂРёС‚Рµ! РҐРѕС‚РёС‚Рµ СЃРґРµР»Р°С‚СЊ СЌС‚Рѕ?В» (РџСЂРѕС…РѕР¶Р°СЏ Р»РµРґРё)
 
-Блондинка теряет весь контроль и выпускает свою сдерживаемую мочу густой струёй там, где она стояла
+*РџСЃСЃСЃСЃСЃСЃСЃСЃ*
 
-«Aaaahh … Блондинка писает густой струёй мочи в течение 4 минут, прежде чем её струя возвращается к нормальной, опорожняя свой вместительный мочевой пузырь ещё 50 секунд, прежде чем он иссякнет.
+В«РћРѕРѕ, РґРµСЂР¶Сѓ СЌС‚Рѕ СЃ СѓС‚СЂР°вЂ¦ РђР°Р°Р°В» (Р›РµРґРё)
 
-Она стояла там ошеломлённая, когда внезапно всех вернул к реальности пронзительный визг высокой тональности, эхом разносящийся по оживлённой улице.
+*РџСЃСЃСЃСЃСЃСЃ*
+
+Р›РµРґРё СЃ РІРїРµС‡Р°С‚Р»СЏСЋС‰РµР№ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№ РјРѕС‡РѕР№ РЅР°СЃРјРµС…Р°РµС‚СЃСЏ РЅР°Рґ РєРѕРЅРєСѓСЂРµРЅС‚Р°РјРё, РєРѕС‚РѕСЂС‹Рµ СЃ С‚РѕСЃРєРѕР№ РЅР°Р±Р»СЋРґР°СЋС‚ Р·Р° РµС‘ РѕСЃРІРѕР±РѕР¶РґРµРЅРёРµРј.
+
+Р”РІРµ РґР°РјС‹ РІРєР»СЋС‡Р°СЋС‚СЃСЏ, РєРѕРіРґР° РјРѕС‡Р° РґР°РјС‹ РІС‹СЃС‹С…Р°РµС‚
+
+РЎРїСѓСЃС‚СЏ РІСЃРµРіРѕ РЅРµСЃРєРѕР»СЊРєРѕ РјРёРЅСѓС‚ Р·Р°С‚СЂСѓРґРЅС‘РЅРЅРѕРµ РґС‹С…Р°РЅРёРµ Р±Р»РѕРЅРґРёРЅРєРё РїРµСЂРµС…РѕРґРёС‚ РІ СЂСѓРіР°С‚РµР»СЊСЃС‚РІР°, РєРѕРіРґР° РѕРЅР° РєРѕРЅС‡Р°РµС‚ РЅР° РїРѕР», РІСЃС‘ РµС‰С‘ РїС‹С‚Р°СЏСЃСЊ СѓРґРµСЂР¶Р°С‚СЊСЃСЏ
+
+В«Р‘Р»вЂ¦ РЅРµС‚, РЅРµС‚, РЅРµС‚, СЏ РЅРµ РјРѕРіСѓвЂ¦В» (Р›РёСЏ)
+
+РљР°Р¶РµС‚СЃСЏ, РѕРЅР° РїС‹С‚Р°РµС‚СЃСЏ РѕСЃС‚Р°РЅРѕРІРёС‚СЊ РЅРµРёР·Р±РµР¶РЅРѕРµ, РЅРѕ РµС‘ СЃС„РёРЅРєС‚РµСЂ Р±РѕР»СЊС€Рµ РЅРµ РІС‹РґРµСЂР¶РёРІР°РµС‚
+
+*PPPSSSSSSSSSSSSSSSPPPPPPPPPPPPPPPPPPPPPP* (Р›РёСЏ)
+
+Р‘Р»РѕРЅРґРёРЅРєР° С‚РµСЂСЏРµС‚ РІРµСЃСЊ РєРѕРЅС‚СЂРѕР»СЊ Рё РІС‹РїСѓСЃРєР°РµС‚ СЃРІРѕСЋ СЃРґРµСЂР¶РёРІР°РµРјСѓСЋ РјРѕС‡Сѓ РіСѓСЃС‚РѕР№ СЃС‚СЂСѓС‘Р№ С‚Р°Рј, РіРґРµ РѕРЅР° СЃС‚РѕСЏР»Р°
+
+В«Aaaahh вЂ¦ Р‘Р»РѕРЅРґРёРЅРєР° РїРёСЃР°РµС‚ РіСѓСЃС‚РѕР№ СЃС‚СЂСѓС‘Р№ РјРѕС‡Рё РІ С‚РµС‡РµРЅРёРµ 4 РјРёРЅСѓС‚, РїСЂРµР¶РґРµ С‡РµРј РµС‘ СЃС‚СЂСѓСЏ РІРѕР·РІСЂР°С‰Р°РµС‚СЃСЏ Рє РЅРѕСЂРјР°Р»СЊРЅРѕР№, РѕРїРѕСЂРѕР¶РЅСЏСЏ СЃРІРѕР№ РІРјРµСЃС‚РёС‚РµР»СЊРЅС‹Р№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ РµС‰С‘ 50 СЃРµРєСѓРЅРґ, РїСЂРµР¶РґРµ С‡РµРј РѕРЅ РёСЃСЃСЏРєРЅРµС‚.
+
+РћРЅР° СЃС‚РѕСЏР»Р° С‚Р°Рј РѕС€РµР»РѕРјР»С‘РЅРЅР°СЏ, РєРѕРіРґР° РІРЅРµР·Р°РїРЅРѕ РІСЃРµС… РІРµСЂРЅСѓР» Рє СЂРµР°Р»СЊРЅРѕСЃС‚Рё РїСЂРѕРЅР·РёС‚РµР»СЊРЅС‹Р№ РІРёР·Рі РІС‹СЃРѕРєРѕР№ С‚РѕРЅР°Р»СЊРЅРѕСЃС‚Рё, СЌС…РѕРј СЂР°Р·РЅРѕСЃСЏС‰РёР№СЃСЏ РїРѕ РѕР¶РёРІР»С‘РЅРЅРѕР№ СѓР»РёС†Рµ.
 
 *PPPPPPPPPPPSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS*
 
 *PSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS*
 
-Звук, который создаёт женщина по имени Элиана, когда она отпускает свой мочевой пузырь, словно проливной ливень на жаждущую улицу, выплёскивая огромное количество кипящей мочи со скоростью, сравнимой со скоростью самой сильной из лошадей, потому что она победила.
+Р—РІСѓРє, РєРѕС‚РѕСЂС‹Р№ СЃРѕР·РґР°С‘С‚ Р¶РµРЅС‰РёРЅР° РїРѕ РёРјРµРЅРё Р­Р»РёР°РЅР°, РєРѕРіРґР° РѕРЅР° РѕС‚РїСѓСЃРєР°РµС‚ СЃРІРѕР№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ, СЃР»РѕРІРЅРѕ РїСЂРѕР»РёРІРЅРѕР№ Р»РёРІРµРЅСЊ РЅР° Р¶Р°Р¶РґСѓС‰СѓСЋ СѓР»РёС†Сѓ, РІС‹РїР»С‘СЃРєРёРІР°СЏ РѕРіСЂРѕРјРЅРѕРµ РєРѕР»РёС‡РµСЃС‚РІРѕ РєРёРїСЏС‰РµР№ РјРѕС‡Рё СЃРѕ СЃРєРѕСЂРѕСЃС‚СЊСЋ, СЃСЂР°РІРЅРёРјРѕР№ СЃРѕ СЃРєРѕСЂРѕСЃС‚СЊСЋ СЃР°РјРѕР№ СЃРёР»СЊРЅРѕР№ РёР· Р»РѕС€Р°РґРµР№, РїРѕС‚РѕРјСѓ С‡С‚Рѕ РѕРЅР° РїРѕР±РµРґРёР»Р°.
 
-Она не стонала и не издавала ни звука, только звук её мочи и тяжёлое дыхание разносились по улице, а на её лице отражалось абсолютное блаженство — истинный след её невероятной борьбы и доказательство её силы.
+РћРЅР° РЅРµ СЃС‚РѕРЅР°Р»Р° Рё РЅРµ РёР·РґР°РІР°Р»Р° РЅРё Р·РІСѓРєР°, С‚РѕР»СЊРєРѕ Р·РІСѓРє РµС‘ РјРѕС‡Рё Рё С‚СЏР¶С‘Р»РѕРµ РґС‹С…Р°РЅРёРµ СЂР°Р·РЅРѕСЃРёР»РёСЃСЊ РїРѕ СѓР»РёС†Рµ, Р° РЅР° РµС‘ Р»РёС†Рµ РѕС‚СЂР°Р¶Р°Р»РѕСЃСЊ Р°Р±СЃРѕР»СЋС‚РЅРѕРµ Р±Р»Р°Р¶РµРЅСЃС‚РІРѕ вЂ” РёСЃС‚РёРЅРЅС‹Р№ СЃР»РµРґ РµС‘ РЅРµРІРµСЂРѕСЏС‚РЅРѕР№ Р±РѕСЂСЊР±С‹ Рё РґРѕРєР°Р·Р°С‚РµР»СЊСЃС‚РІРѕ РµС‘ СЃРёР»С‹.
 
-Она мочилась, не сбавляя темпа, 7 минут подряд, к большому ужасу соперницы.
+РћРЅР° РјРѕС‡РёР»Р°СЃСЊ, РЅРµ СЃР±Р°РІР»СЏСЏ С‚РµРјРїР°, 7 РјРёРЅСѓС‚ РїРѕРґСЂСЏРґ, Рє Р±РѕР»СЊС€РѕРјСѓ СѓР¶Р°СЃСѓ СЃРѕРїРµСЂРЅРёС†С‹.
 
-Её поток не замедлился; он просто остановился, пока она оставалась ошеломлённой, тяжело дыша, пытаясь осознать невероятные чувства, которые она сейчас испытывала.
+Р•С‘ РїРѕС‚РѕРє РЅРµ Р·Р°РјРµРґР»РёР»СЃСЏ; РѕРЅ РїСЂРѕСЃС‚Рѕ РѕСЃС‚Р°РЅРѕРІРёР»СЃСЏ, РїРѕРєР° РѕРЅР° РѕСЃС‚Р°РІР°Р»Р°СЃСЊ РѕС€РµР»РѕРјР»С‘РЅРЅРѕР№, С‚СЏР¶РµР»Рѕ РґС‹С€Р°, РїС‹С‚Р°СЏСЃСЊ РѕСЃРѕР·РЅР°С‚СЊ РЅРµРІРµСЂРѕСЏС‚РЅС‹Рµ С‡СѓРІСЃС‚РІР°, РєРѕС‚РѕСЂС‹Рµ РѕРЅР° СЃРµР№С‡Р°СЃ РёСЃРїС‹С‚С‹РІР°Р»Р°.
 
-Когда на толпу опускается тишина, время, казалось, остановилось, на платформу выходит мужчина с чёткими чертами лица и хорошим телосложением и готовится объявить результаты.
+РљРѕРіРґР° РЅР° С‚РѕР»РїСѓ РѕРїСѓСЃРєР°РµС‚СЃСЏ С‚РёС€РёРЅР°, РІСЂРµРјСЏ, РєР°Р·Р°Р»РѕСЃСЊ, РѕСЃС‚Р°РЅРѕРІРёР»РѕСЃСЊ, РЅР° РїР»Р°С‚С„РѕСЂРјСѓ РІС‹С…РѕРґРёС‚ РјСѓР¶С‡РёРЅР° СЃ С‡С‘С‚РєРёРјРё С‡РµСЂС‚Р°РјРё Р»РёС†Р° Рё С…РѕСЂРѕС€РёРј С‚РµР»РѕСЃР»РѕР¶РµРЅРёРµРј Рё РіРѕС‚РѕРІРёС‚СЃСЏ РѕР±СЉСЏРІРёС‚СЊ СЂРµР·СѓР»СЊС‚Р°С‚С‹.
 
-«Лиа 4 мин 50 сек, Элиана 7 мин» (мужчина)
+В«Р›РёР° 4 РјРёРЅ 50 СЃРµРє, Р­Р»РёР°РЅР° 7 РјРёРЅВ» (РјСѓР¶С‡РёРЅР°)
 
-«Элиана — победительница!» (мужчина)
+В«Р­Р»РёР°РЅР° вЂ” РїРѕР±РµРґРёС‚РµР»СЊРЅРёС†Р°!В» (РјСѓР¶С‡РёРЅР°)
 
-Из толпы раздаются радостные крики, как у мужчин, так и у женщин, когда мужчина поднимает свою королеву на руки и уходит с платформы, оставляя позади блондинку, которая разочарованно стояла в луже собственного порождения.
-
-###
-
-Удовлетворённый обходным путём, молодой человек выходит из толпы и продолжает своё путешествие по этой чужой земле, пока он идёт по городу, прислушиваясь к различным шипениям женщин, которые, не моргнув глазом, мочатся, продолжая выполнять свои разнообразные дела, некоторые разговаривают с друзьями, другие покупают товары на рынке.
-
-Он продолжает идти, пытаясь скрыть выпуклость, которая теперь появляется в его брюках.
-
-Его зовут Арон, наследный принц Люмариса, эксцентричный молодой человек с не таким уж скрытым фетишем на мочу, его цель — найти женщину с самым большим мочевым пузырём, пересекающую неизвестные границы в этом мире, где люди свободно мочатся без угрызений совести или стыда, мире, отличном от нашего, но похожем на наш, где течение времени, по-видимому, замедлилось.
-
-Это история о реинкарнации, росте и, что самое важное, мочеиспускании.
+РР· С‚РѕР»РїС‹ СЂР°Р·РґР°СЋС‚СЃСЏ СЂР°РґРѕСЃС‚РЅС‹Рµ РєСЂРёРєРё, РєР°Рє Сѓ РјСѓР¶С‡РёРЅ, С‚Р°Рє Рё Сѓ Р¶РµРЅС‰РёРЅ, РєРѕРіРґР° РјСѓР¶С‡РёРЅР° РїРѕРґРЅРёРјР°РµС‚ СЃРІРѕСЋ РєРѕСЂРѕР»РµРІСѓ РЅР° СЂСѓРєРё Рё СѓС…РѕРґРёС‚ СЃ РїР»Р°С‚С„РѕСЂРјС‹, РѕСЃС‚Р°РІР»СЏСЏ РїРѕР·Р°РґРё Р±Р»РѕРЅРґРёРЅРєСѓ, РєРѕС‚РѕСЂР°СЏ СЂР°Р·РѕС‡Р°СЂРѕРІР°РЅРЅРѕ СЃС‚РѕСЏР»Р° РІ Р»СѓР¶Рµ СЃРѕР±СЃС‚РІРµРЅРЅРѕРіРѕ РїРѕСЂРѕР¶РґРµРЅРёСЏ.
 
 ###
 
-Глава 1: Утро, не похожее ни на одно другое
+РЈРґРѕРІР»РµС‚РІРѕСЂС‘РЅРЅС‹Р№ РѕР±С…РѕРґРЅС‹Рј РїСѓС‚С‘Рј, РјРѕР»РѕРґРѕР№ С‡РµР»РѕРІРµРє РІС‹С…РѕРґРёС‚ РёР· С‚РѕР»РїС‹ Рё РїСЂРѕРґРѕР»Р¶Р°РµС‚ СЃРІРѕС‘ РїСѓС‚РµС€РµСЃС‚РІРёРµ РїРѕ СЌС‚РѕР№ С‡СѓР¶РѕР№ Р·РµРјР»Рµ, РїРѕРєР° РѕРЅ РёРґС‘С‚ РїРѕ РіРѕСЂРѕРґСѓ, РїСЂРёСЃР»СѓС€РёРІР°СЏСЃСЊ Рє СЂР°Р·Р»РёС‡РЅС‹Рј С€РёРїРµРЅРёСЏРј Р¶РµРЅС‰РёРЅ, РєРѕС‚РѕСЂС‹Рµ, РЅРµ РјРѕСЂРіРЅСѓРІ РіР»Р°Р·РѕРј, РјРѕС‡Р°С‚СЃСЏ, РїСЂРѕРґРѕР»Р¶Р°СЏ РІС‹РїРѕР»РЅСЏС‚СЊ СЃРІРѕРё СЂР°Р·РЅРѕРѕР±СЂР°Р·РЅС‹Рµ РґРµР»Р°, РЅРµРєРѕС‚РѕСЂС‹Рµ СЂР°Р·РіРѕРІР°СЂРёРІР°СЋС‚ СЃ РґСЂСѓР·СЊСЏРјРё, РґСЂСѓРіРёРµ РїРѕРєСѓРїР°СЋС‚ С‚РѕРІР°СЂС‹ РЅР° СЂС‹РЅРєРµ.
 
-Сколько себя помню, я всегда интересовался тем, как удерживать мочу и мочиться в огромных количествах, особенно когда женщины держат очень полный мочевой пузырь без жалоб. По мере взросления это увлечение переросло в фетиш, я перескакивал с одного онлайн-форума на другой, общаясь с единомышленниками, и пис%л много историй на эту тему.
+РћРЅ РїСЂРѕРґРѕР»Р¶Р°РµС‚ РёРґС‚Рё, РїС‹С‚Р°СЏСЃСЊ СЃРєСЂС‹С‚СЊ РІС‹РїСѓРєР»РѕСЃС‚СЊ, РєРѕС‚РѕСЂР°СЏ С‚РµРїРµСЂСЊ РїРѕСЏРІР»СЏРµС‚СЃСЏ РІ РµРіРѕ Р±СЂСЋРєР°С….
 
-Как и у любого взрослого, у меня была основная работа, которая мне не очень нравилась. Это было так внезапно, забавно, как жизнь может так быстро круто измениться. Я поскользнулся и упал на рельсы метро, ??и прежде чем я успел среагировать, моё зрение потемнело…
+Р•РіРѕ Р·РѕРІСѓС‚ РђСЂРѕРЅ, РЅР°СЃР»РµРґРЅС‹Р№ РїСЂРёРЅС† Р›СЋРјР°СЂРёСЃР°, СЌРєСЃС†РµРЅС‚СЂРёС‡РЅС‹Р№ РјРѕР»РѕРґРѕР№ С‡РµР»РѕРІРµРє СЃ РЅРµ С‚Р°РєРёРј СѓР¶ СЃРєСЂС‹С‚С‹Рј С„РµС‚РёС€РµРј РЅР° РјРѕС‡Сѓ, РµРіРѕ С†РµР»СЊ вЂ” РЅР°Р№С‚Рё Р¶РµРЅС‰РёРЅСѓ СЃ СЃР°РјС‹Рј Р±РѕР»СЊС€РёРј РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј, РїРµСЂРµСЃРµРєР°СЋС‰СѓСЋ РЅРµРёР·РІРµСЃС‚РЅС‹Рµ РіСЂР°РЅРёС†С‹ РІ СЌС‚РѕРј РјРёСЂРµ, РіРґРµ Р»СЋРґРё СЃРІРѕР±РѕРґРЅРѕ РјРѕС‡Р°С‚СЃСЏ Р±РµР· СѓРіСЂС‹Р·РµРЅРёР№ СЃРѕРІРµСЃС‚Рё РёР»Рё СЃС‚С‹РґР°, РјРёСЂРµ, РѕС‚Р»РёС‡РЅРѕРј РѕС‚ РЅР°С€РµРіРѕ, РЅРѕ РїРѕС…РѕР¶РµРј РЅР° РЅР°С€, РіРґРµ С‚РµС‡РµРЅРёРµ РІСЂРµРјРµРЅРё, РїРѕ-РІРёРґРёРјРѕРјСѓ, Р·Р°РјРµРґР»РёР»РѕСЃСЊ.
 
-###
-
-В следующий раз, когда я открыл глаза, я обнаружил себя в неизвестной комнате, спящим на пушистом матрасе, комната выглядела как та, что можно увидеть в исторических драмах о феодальной Европе
-
-Внезапно острая боль пронзила мою голову, когда воспоминания о человеке, которого я не знал, внезапно нахлынули на меня.
-
-Его звали Арон, принц Люмарис, он родился 21 год назад в 455 году, был объявлен наследным принцем в возрасте 18 лет. Остальные его воспоминания размыты, так как я с трудом различаю его и мои.
-
-Всё ещё лежишь, думаешь ты
-
-Итак, давайте проясним факты: я перевоплотился после истории с метро в этого принца и вспомнил воспоминания из своей предыдущей жизни, когда ударился головой. Какого хрена я только что получил исекай?
-
-Когда вы заканчиваете эту цепочку мыслей и поворачиваетесь на бок, пытаясь открыть глаза, среди солнечных лучей, сидя на стуле, скрестив ноги, с широко открытыми от шока глазами, девушка, нет, служанка, смотрит на вас
-
-Прежде чем вы успели отреагировать, она запрыгивает на кровать, давая вам хороший взгляд под юбкой, её влагалище выставлено на всеобщее обозрение, над ним небольшая выпуклость
-
-«Ваше высочество, вы хорошо себя чувствуете, почему вы не позвонили??» (служанка)
-
-«Э, вы… На вас ничего нет, где ваши трусики?»
-
-«Э, ваше высочество, о чём вы? Что такое панатис» (служанка)
-
-«Э, трусики, нижнее бельё, нижнее бельё…»
-
-«Ваше высочество, что с вами случилось, вы говорите слова, о которых я никогда не слышал… Вы меня помните?» (Горничная)
-
-Хм, слова, которые она не слышала, о чём эта женщина????, подождите, кто эта горничная, ААА, больно вспоминать, что происходит
-
-«А, эм, извините, у меня голова болит, кто вы?»
-
-«Я Аманда, ваша личная горничная, моя мать была вашей кормилицей, пожалуйста, успокойтесь и выслушайте меня» (Аманда)
-
-«А, да, хорошо»
-
-Когда вы садитесь, чтобы послушать
-
-«Ваше высочество, вы знаете, кто вы?» (Аманда)
-
-«Да, просто это, больно пытаться вспомнить что-то ещё»
-
-«Мой господин, вы упали с лошади и довольно сильно ударились головой, нам нужно немедленно добраться до королевы-матери и чтобы вас осмотрел королевский врач» (Аманда)
-
-«Эээ, да, давайте сделаем это»
-
-Когда она начинает вставать и уходить, она на мгновение останавливается и нагло задирает юбку с беспокойством, чтобы взглянуть на свою письку, нет, на её раздутый живот, вау, я не видела этого раньше, это что
-
-Её… мочевой пузырь, мои мысли немедленно начинают работать в ускоренном режиме, так как я чувствую, что возбуждаюсь, почему эта служанка была в моей комнате с таким полным мочевым пузырём, и почему она просто задрала юбку, чтобы посмотреть на него, что за фигня происходит прямо сейчас
-
-Поскольку вы поглощены своими мыслями, она замечает, что вы смотрите на неё, и, не говоря ни слова о вашем страстном взгляде, застрявшем на её промежности, она опускает юбку и идёт к дверь
-
-«Ваше высочество, давайте поторопимся» (Аманда)
-
-Вы выходите из комнаты, а она следует за вами, сопровождая вас по экстравагантным коридорам
-
-Это действительно замок, ха, но что случилось с этим служанкой, чёрт возьми, где я, я только что увидел что-то великое, жаль, что меня не будят каждый день так
-
-Когда вы идёте, поглощённые своими извращёнными мыслями, вы замечаете, что она отстаёт, оборачиваетесь, чтобы взглянуть, вас снова встречает красивая щель и скромная выпуклость наверху, её обладательница теперь выглядит обеспокоенной
-
-Вы смотрите, заворожённо наблюдая за её странным поведением, когда она внезапно со вздохом нагло начинает поливать пол струёй чистой мочи, не заботясь ни о чём, всё ещё полностью на виду и осознавая ваше присутствие
-
-*ВЗДОХ*
-
-Пссссс
-
-Пссс
-
-Она писила, казалось, целую вечность, пока вы с благоговением смотрите, надутый пузырь медленно сдувается, облегчение омывает её лицо
-
-Псссс
-
-Вскоре великолепное зрелище подходит к концу, её писька всё ещё капает, когда она поворачивается к вам с улыбкой
-
-«Гораздо лучше, апельсиновый сок вчера вечером был слишком большим, почему вы остановили моего господина, давайте продолжим» (Аманда)
-
-Она начинает идти, а моча всё ещё капает по её ногам, на её лице радостная улыбка
-
-«Да, пошли»
-
-Ошеломлённый тем, что ты только что увидел, моё самое большое желание увидеть, как женщина с полным мочевым пузырём писает, только что сбылось, и она просто отмахнулась, как будто ничего не происходит, что происходит, я сплю? Если так, то я не хочу просыпаться
-
-Вы продолжаете следовать за ней, полностью потерявшись в своих мыслях, не осознавая происходящего вокруг, вспоминая водопад мочи и её сдувающийся мочевой пузырь — зрелище, которое стоит увидеть
-
-«Я не понимаю, что происходит, но мне это нравится»
-
-Вы шепчете себе, продолжая идти по коридору, размышляя о том, что готовит будущее.
+Р­С‚Рѕ РёСЃС‚РѕСЂРёСЏ Рѕ СЂРµРёРЅРєР°СЂРЅР°С†РёРё, СЂРѕСЃС‚Рµ Рё, С‡С‚Рѕ СЃР°РјРѕРµ РІР°Р¶РЅРѕРµ, РјРѕС‡РµРёСЃРїСѓСЃРєР°РЅРёРё.
 
 ###
 
-На этом пока всё, пожалуйста, скажите мне, что мне следует улучшить и что добавить. Также, пожалуйста, предложите названия для истории, если у вас есть лучшие на примете.
+Р“Р»Р°РІР° 1: РЈС‚СЂРѕ, РЅРµ РїРѕС…РѕР¶РµРµ РЅРё РЅР° РѕРґРЅРѕ РґСЂСѓРіРѕРµ
+
+РЎРєРѕР»СЊРєРѕ СЃРµР±СЏ РїРѕРјРЅСЋ, СЏ РІСЃРµРіРґР° РёРЅС‚РµСЂРµСЃРѕРІР°Р»СЃСЏ С‚РµРј, РєР°Рє СѓРґРµСЂР¶РёРІР°С‚СЊ РјРѕС‡Сѓ Рё РјРѕС‡РёС‚СЊСЃСЏ РІ РѕРіСЂРѕРјРЅС‹С… РєРѕР»РёС‡РµСЃС‚РІР°С…, РѕСЃРѕР±РµРЅРЅРѕ РєРѕРіРґР° Р¶РµРЅС‰РёРЅС‹ РґРµСЂР¶Р°С‚ РѕС‡РµРЅСЊ РїРѕР»РЅС‹Р№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ Р±РµР· Р¶Р°Р»РѕР±. РџРѕ РјРµСЂРµ РІР·СЂРѕСЃР»РµРЅРёСЏ СЌС‚Рѕ СѓРІР»РµС‡РµРЅРёРµ РїРµСЂРµСЂРѕСЃР»Рѕ РІ С„РµС‚РёС€, СЏ РїРµСЂРµСЃРєР°РєРёРІР°Р» СЃ РѕРґРЅРѕРіРѕ РѕРЅР»Р°Р№РЅ-С„РѕСЂСѓРјР° РЅР° РґСЂСѓРіРѕР№, РѕР±С‰Р°СЏСЃСЊ СЃ РµРґРёРЅРѕРјС‹С€Р»РµРЅРЅРёРєР°РјРё, Рё РїРёСЃ%Р» РјРЅРѕРіРѕ РёСЃС‚РѕСЂРёР№ РЅР° СЌС‚Сѓ С‚РµРјСѓ.
+
+РљР°Рє Рё Сѓ Р»СЋР±РѕРіРѕ РІР·СЂРѕСЃР»РѕРіРѕ, Сѓ РјРµРЅСЏ Р±С‹Р»Р° РѕСЃРЅРѕРІРЅР°СЏ СЂР°Р±РѕС‚Р°, РєРѕС‚РѕСЂР°СЏ РјРЅРµ РЅРµ РѕС‡РµРЅСЊ РЅСЂР°РІРёР»Р°СЃСЊ. Р­С‚Рѕ Р±С‹Р»Рѕ С‚Р°Рє РІРЅРµР·Р°РїРЅРѕ, Р·Р°Р±Р°РІРЅРѕ, РєР°Рє Р¶РёР·РЅСЊ РјРѕР¶РµС‚ С‚Р°Рє Р±С‹СЃС‚СЂРѕ РєСЂСѓС‚Рѕ РёР·РјРµРЅРёС‚СЊСЃСЏ. РЇ РїРѕСЃРєРѕР»СЊР·РЅСѓР»СЃСЏ Рё СѓРїР°Р» РЅР° СЂРµР»СЊСЃС‹ РјРµС‚СЂРѕ, ??Рё РїСЂРµР¶РґРµ С‡РµРј СЏ СѓСЃРїРµР» СЃСЂРµР°РіРёСЂРѕРІР°С‚СЊ, РјРѕС‘ Р·СЂРµРЅРёРµ РїРѕС‚РµРјРЅРµР»РѕвЂ¦
+
+###
+
+Р’ СЃР»РµРґСѓСЋС‰РёР№ СЂР°Р·, РєРѕРіРґР° СЏ РѕС‚РєСЂС‹Р» РіР»Р°Р·Р°, СЏ РѕР±РЅР°СЂСѓР¶РёР» СЃРµР±СЏ РІ РЅРµРёР·РІРµСЃС‚РЅРѕР№ РєРѕРјРЅР°С‚Рµ, СЃРїСЏС‰РёРј РЅР° РїСѓС€РёСЃС‚РѕРј РјР°С‚СЂР°СЃРµ, РєРѕРјРЅР°С‚Р° РІС‹РіР»СЏРґРµР»Р° РєР°Рє С‚Р°, С‡С‚Рѕ РјРѕР¶РЅРѕ СѓРІРёРґРµС‚СЊ РІ РёСЃС‚РѕСЂРёС‡РµСЃРєРёС… РґСЂР°РјР°С… Рѕ С„РµРѕРґР°Р»СЊРЅРѕР№ Р•РІСЂРѕРїРµ
+
+Р’РЅРµР·Р°РїРЅРѕ РѕСЃС‚СЂР°СЏ Р±РѕР»СЊ РїСЂРѕРЅР·РёР»Р° РјРѕСЋ РіРѕР»РѕРІСѓ, РєРѕРіРґР° РІРѕСЃРїРѕРјРёРЅР°РЅРёСЏ Рѕ С‡РµР»РѕРІРµРєРµ, РєРѕС‚РѕСЂРѕРіРѕ СЏ РЅРµ Р·РЅР°Р», РІРЅРµР·Р°РїРЅРѕ РЅР°С…Р»С‹РЅСѓР»Рё РЅР° РјРµРЅСЏ.
+
+Р•РіРѕ Р·РІР°Р»Рё РђСЂРѕРЅ, РїСЂРёРЅС† Р›СЋРјР°СЂРёСЃ, РѕРЅ СЂРѕРґРёР»СЃСЏ 21 РіРѕРґ РЅР°Р·Р°Рґ РІ 455 РіРѕРґСѓ, Р±С‹Р» РѕР±СЉСЏРІР»РµРЅ РЅР°СЃР»РµРґРЅС‹Рј РїСЂРёРЅС†РµРј РІ РІРѕР·СЂР°СЃС‚Рµ 18 Р»РµС‚. РћСЃС‚Р°Р»СЊРЅС‹Рµ РµРіРѕ РІРѕСЃРїРѕРјРёРЅР°РЅРёСЏ СЂР°Р·РјС‹С‚С‹, С‚Р°Рє РєР°Рє СЏ СЃ С‚СЂСѓРґРѕРј СЂР°Р·Р»РёС‡Р°СЋ РµРіРѕ Рё РјРѕРё.
+
+Р’СЃС‘ РµС‰С‘ Р»РµР¶РёС€СЊ, РґСѓРјР°РµС€СЊ С‚С‹
+
+РС‚Р°Рє, РґР°РІР°Р№С‚Рµ РїСЂРѕСЏСЃРЅРёРј С„Р°РєС‚С‹: СЏ РїРµСЂРµРІРѕРїР»РѕС‚РёР»СЃСЏ РїРѕСЃР»Рµ РёСЃС‚РѕСЂРёРё СЃ РјРµС‚СЂРѕ РІ СЌС‚РѕРіРѕ РїСЂРёРЅС†Р° Рё РІСЃРїРѕРјРЅРёР» РІРѕСЃРїРѕРјРёРЅР°РЅРёСЏ РёР· СЃРІРѕРµР№ РїСЂРµРґС‹РґСѓС‰РµР№ Р¶РёР·РЅРё, РєРѕРіРґР° СѓРґР°СЂРёР»СЃСЏ РіРѕР»РѕРІРѕР№. РљР°РєРѕРіРѕ С…СЂРµРЅР° СЏ С‚РѕР»СЊРєРѕ С‡С‚Рѕ РїРѕР»СѓС‡РёР» РёСЃРµРєР°Р№?
+
+РљРѕРіРґР° РІС‹ Р·Р°РєР°РЅС‡РёРІР°РµС‚Рµ СЌС‚Сѓ С†РµРїРѕС‡РєСѓ РјС‹СЃР»РµР№ Рё РїРѕРІРѕСЂР°С‡РёРІР°РµС‚РµСЃСЊ РЅР° Р±РѕРє, РїС‹С‚Р°СЏСЃСЊ РѕС‚РєСЂС‹С‚СЊ РіР»Р°Р·Р°, СЃСЂРµРґРё СЃРѕР»РЅРµС‡РЅС‹С… Р»СѓС‡РµР№, СЃРёРґСЏ РЅР° СЃС‚СѓР»Рµ, СЃРєСЂРµСЃС‚РёРІ РЅРѕРіРё, СЃ С€РёСЂРѕРєРѕ РѕС‚РєСЂС‹С‚С‹РјРё РѕС‚ С€РѕРєР° РіР»Р°Р·Р°РјРё, РґРµРІСѓС€РєР°, РЅРµС‚, СЃР»СѓР¶Р°РЅРєР°, СЃРјРѕС‚СЂРёС‚ РЅР° РІР°СЃ
+
+РџСЂРµР¶РґРµ С‡РµРј РІС‹ СѓСЃРїРµР»Рё РѕС‚СЂРµР°РіРёСЂРѕРІР°С‚СЊ, РѕРЅР° Р·Р°РїСЂС‹РіРёРІР°РµС‚ РЅР° РєСЂРѕРІР°С‚СЊ, РґР°РІР°СЏ РІР°Рј С…РѕСЂРѕС€РёР№ РІР·РіР»СЏРґ РїРѕРґ СЋР±РєРѕР№, РµС‘ РІР»Р°РіР°Р»РёС‰Рµ РІС‹СЃС‚Р°РІР»РµРЅРѕ РЅР° РІСЃРµРѕР±С‰РµРµ РѕР±РѕР·СЂРµРЅРёРµ, РЅР°Рґ РЅРёРј РЅРµР±РѕР»СЊС€Р°СЏ РІС‹РїСѓРєР»РѕСЃС‚СЊ
+
+В«Р’Р°С€Рµ РІС‹СЃРѕС‡РµСЃС‚РІРѕ, РІС‹ С…РѕСЂРѕС€Рѕ СЃРµР±СЏ С‡СѓРІСЃС‚РІСѓРµС‚Рµ, РїРѕС‡РµРјСѓ РІС‹ РЅРµ РїРѕР·РІРѕРЅРёР»Рё??В» (СЃР»СѓР¶Р°РЅРєР°)
+
+В«Р­, РІС‹вЂ¦ РќР° РІР°СЃ РЅРёС‡РµРіРѕ РЅРµС‚, РіРґРµ РІР°С€Рё С‚СЂСѓСЃРёРєРё?В»
+
+В«Р­, РІР°С€Рµ РІС‹СЃРѕС‡РµСЃС‚РІРѕ, Рѕ С‡С‘Рј РІС‹? Р§С‚Рѕ С‚Р°РєРѕРµ РїР°РЅР°С‚РёСЃВ» (СЃР»СѓР¶Р°РЅРєР°)
+
+В«Р­, С‚СЂСѓСЃРёРєРё, РЅРёР¶РЅРµРµ Р±РµР»СЊС‘, РЅРёР¶РЅРµРµ Р±РµР»СЊС‘вЂ¦В»
+
+В«Р’Р°С€Рµ РІС‹СЃРѕС‡РµСЃС‚РІРѕ, С‡С‚Рѕ СЃ РІР°РјРё СЃР»СѓС‡РёР»РѕСЃСЊ, РІС‹ РіРѕРІРѕСЂРёС‚Рµ СЃР»РѕРІР°, Рѕ РєРѕС‚РѕСЂС‹С… СЏ РЅРёРєРѕРіРґР° РЅРµ СЃР»С‹С€Р°Р»вЂ¦ Р’С‹ РјРµРЅСЏ РїРѕРјРЅРёС‚Рµ?В» (Р“РѕСЂРЅРёС‡РЅР°СЏ)
+
+РҐРј, СЃР»РѕРІР°, РєРѕС‚РѕСЂС‹Рµ РѕРЅР° РЅРµ СЃР»С‹С€Р°Р»Р°, Рѕ С‡С‘Рј СЌС‚Р° Р¶РµРЅС‰РёРЅР°????, РїРѕРґРѕР¶РґРёС‚Рµ, РєС‚Рѕ СЌС‚Р° РіРѕСЂРЅРёС‡РЅР°СЏ, РђРђРђ, Р±РѕР»СЊРЅРѕ РІСЃРїРѕРјРёРЅР°С‚СЊ, С‡С‚Рѕ РїСЂРѕРёСЃС…РѕРґРёС‚
+
+В«Рђ, СЌРј, РёР·РІРёРЅРёС‚Рµ, Сѓ РјРµРЅСЏ РіРѕР»РѕРІР° Р±РѕР»РёС‚, РєС‚Рѕ РІС‹?В»
+
+В«РЇ РђРјР°РЅРґР°, РІР°С€Р° Р»РёС‡РЅР°СЏ РіРѕСЂРЅРёС‡РЅР°СЏ, РјРѕСЏ РјР°С‚СЊ Р±С‹Р»Р° РІР°С€РµР№ РєРѕСЂРјРёР»РёС†РµР№, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, СѓСЃРїРѕРєРѕР№С‚РµСЃСЊ Рё РІС‹СЃР»СѓС€Р°Р№С‚Рµ РјРµРЅСЏВ» (РђРјР°РЅРґР°)
+
+В«Рђ, РґР°, С…РѕСЂРѕС€РѕВ»
+
+РљРѕРіРґР° РІС‹ СЃР°РґРёС‚РµСЃСЊ, С‡С‚РѕР±С‹ РїРѕСЃР»СѓС€Р°С‚СЊ
+
+В«Р’Р°С€Рµ РІС‹СЃРѕС‡РµСЃС‚РІРѕ, РІС‹ Р·РЅР°РµС‚Рµ, РєС‚Рѕ РІС‹?В» (РђРјР°РЅРґР°)
+
+В«Р”Р°, РїСЂРѕСЃС‚Рѕ СЌС‚Рѕ, Р±РѕР»СЊРЅРѕ РїС‹С‚Р°С‚СЊСЃСЏ РІСЃРїРѕРјРЅРёС‚СЊ С‡С‚Рѕ-С‚Рѕ РµС‰С‘В»
+
+В«РњРѕР№ РіРѕСЃРїРѕРґРёРЅ, РІС‹ СѓРїР°Р»Рё СЃ Р»РѕС€Р°РґРё Рё РґРѕРІРѕР»СЊРЅРѕ СЃРёР»СЊРЅРѕ СѓРґР°СЂРёР»РёСЃСЊ РіРѕР»РѕРІРѕР№, РЅР°Рј РЅСѓР¶РЅРѕ РЅРµРјРµРґР»РµРЅРЅРѕ РґРѕР±СЂР°С‚СЊСЃСЏ РґРѕ РєРѕСЂРѕР»РµРІС‹-РјР°С‚РµСЂРё Рё С‡С‚РѕР±С‹ РІР°СЃ РѕСЃРјРѕС‚СЂРµР» РєРѕСЂРѕР»РµРІСЃРєРёР№ РІСЂР°С‡В» (РђРјР°РЅРґР°)
+
+В«Р­СЌСЌ, РґР°, РґР°РІР°Р№С‚Рµ СЃРґРµР»Р°РµРј СЌС‚РѕВ»
+
+РљРѕРіРґР° РѕРЅР° РЅР°С‡РёРЅР°РµС‚ РІСЃС‚Р°РІР°С‚СЊ Рё СѓС…РѕРґРёС‚СЊ, РѕРЅР° РЅР° РјРіРЅРѕРІРµРЅРёРµ РѕСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ Рё РЅР°РіР»Рѕ Р·Р°РґРёСЂР°РµС‚ СЋР±РєСѓ СЃ Р±РµСЃРїРѕРєРѕР№СЃС‚РІРѕРј, С‡С‚РѕР±С‹ РІР·РіР»СЏРЅСѓС‚СЊ РЅР° СЃРІРѕСЋ РїРёСЃСЊРєСѓ, РЅРµС‚, РЅР° РµС‘ СЂР°Р·РґСѓС‚С‹Р№ Р¶РёРІРѕС‚, РІР°Сѓ, СЏ РЅРµ РІРёРґРµР»Р° СЌС‚РѕРіРѕ СЂР°РЅСЊС€Рµ, СЌС‚Рѕ С‡С‚Рѕ
+
+Р•С‘вЂ¦ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ, РјРѕРё РјС‹СЃР»Рё РЅРµРјРµРґР»РµРЅРЅРѕ РЅР°С‡РёРЅР°СЋС‚ СЂР°Р±РѕС‚Р°С‚СЊ РІ СѓСЃРєРѕСЂРµРЅРЅРѕРј СЂРµР¶РёРјРµ, С‚Р°Рє РєР°Рє СЏ С‡СѓРІСЃС‚РІСѓСЋ, С‡С‚Рѕ РІРѕР·Р±СѓР¶РґР°СЋСЃСЊ, РїРѕС‡РµРјСѓ СЌС‚Р° СЃР»СѓР¶Р°РЅРєР° Р±С‹Р»Р° РІ РјРѕРµР№ РєРѕРјРЅР°С‚Рµ СЃ С‚Р°РєРёРј РїРѕР»РЅС‹Рј РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј, Рё РїРѕС‡РµРјСѓ РѕРЅР° РїСЂРѕСЃС‚Рѕ Р·Р°РґСЂР°Р»Р° СЋР±РєСѓ, С‡С‚РѕР±С‹ РїРѕСЃРјРѕС‚СЂРµС‚СЊ РЅР° РЅРµРіРѕ, С‡С‚Рѕ Р·Р° С„РёРіРЅСЏ РїСЂРѕРёСЃС…РѕРґРёС‚ РїСЂСЏРјРѕ СЃРµР№С‡Р°СЃ
+
+РџРѕСЃРєРѕР»СЊРєСѓ РІС‹ РїРѕРіР»РѕС‰РµРЅС‹ СЃРІРѕРёРјРё РјС‹СЃР»СЏРјРё, РѕРЅР° Р·Р°РјРµС‡Р°РµС‚, С‡С‚Рѕ РІС‹ СЃРјРѕС‚СЂРёС‚Рµ РЅР° РЅРµС‘, Рё, РЅРµ РіРѕРІРѕСЂСЏ РЅРё СЃР»РѕРІР° Рѕ РІР°С€РµРј СЃС‚СЂР°СЃС‚РЅРѕРј РІР·РіР»СЏРґРµ, Р·Р°СЃС‚СЂСЏРІС€РµРј РЅР° РµС‘ РїСЂРѕРјРµР¶РЅРѕСЃС‚Рё, РѕРЅР° РѕРїСѓСЃРєР°РµС‚ СЋР±РєСѓ Рё РёРґС‘С‚ Рє РґРІРµСЂСЊ
+
+В«Р’Р°С€Рµ РІС‹СЃРѕС‡РµСЃС‚РІРѕ, РґР°РІР°Р№С‚Рµ РїРѕС‚РѕСЂРѕРїРёРјСЃСЏВ» (РђРјР°РЅРґР°)
+
+Р’С‹ РІС‹С…РѕРґРёС‚Рµ РёР· РєРѕРјРЅР°С‚С‹, Р° РѕРЅР° СЃР»РµРґСѓРµС‚ Р·Р° РІР°РјРё, СЃРѕРїСЂРѕРІРѕР¶РґР°СЏ РІР°СЃ РїРѕ СЌРєСЃС‚СЂР°РІР°РіР°РЅС‚РЅС‹Рј РєРѕСЂРёРґРѕСЂР°Рј
+
+Р­С‚Рѕ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ Р·Р°РјРѕРє, С…Р°, РЅРѕ С‡С‚Рѕ СЃР»СѓС‡РёР»РѕСЃСЊ СЃ СЌС‚РёРј СЃР»СѓР¶Р°РЅРєРѕР№, С‡С‘СЂС‚ РІРѕР·СЊРјРё, РіРґРµ СЏ, СЏ С‚РѕР»СЊРєРѕ С‡С‚Рѕ СѓРІРёРґРµР» С‡С‚Рѕ-С‚Рѕ РІРµР»РёРєРѕРµ, Р¶Р°Р»СЊ, С‡С‚Рѕ РјРµРЅСЏ РЅРµ Р±СѓРґСЏС‚ РєР°Р¶РґС‹Р№ РґРµРЅСЊ С‚Р°Рє
+
+РљРѕРіРґР° РІС‹ РёРґС‘С‚Рµ, РїРѕРіР»РѕС‰С‘РЅРЅС‹Рµ СЃРІРѕРёРјРё РёР·РІСЂР°С‰С‘РЅРЅС‹РјРё РјС‹СЃР»СЏРјРё, РІС‹ Р·Р°РјРµС‡Р°РµС‚Рµ, С‡С‚Рѕ РѕРЅР° РѕС‚СЃС‚Р°С‘С‚, РѕР±РѕСЂР°С‡РёРІР°РµС‚РµСЃСЊ, С‡С‚РѕР±С‹ РІР·РіР»СЏРЅСѓС‚СЊ, РІР°СЃ СЃРЅРѕРІР° РІСЃС‚СЂРµС‡Р°РµС‚ РєСЂР°СЃРёРІР°СЏ С‰РµР»СЊ Рё СЃРєСЂРѕРјРЅР°СЏ РІС‹РїСѓРєР»РѕСЃС‚СЊ РЅР°РІРµСЂС…Сѓ, РµС‘ РѕР±Р»Р°РґР°С‚РµР»СЊРЅРёС†Р° С‚РµРїРµСЂСЊ РІС‹РіР»СЏРґРёС‚ РѕР±РµСЃРїРѕРєРѕРµРЅРЅРѕР№
+
+Р’С‹ СЃРјРѕС‚СЂРёС‚Рµ, Р·Р°РІРѕСЂРѕР¶С‘РЅРЅРѕ РЅР°Р±Р»СЋРґР°СЏ Р·Р° РµС‘ СЃС‚СЂР°РЅРЅС‹Рј РїРѕРІРµРґРµРЅРёРµРј, РєРѕРіРґР° РѕРЅР° РІРЅРµР·Р°РїРЅРѕ СЃРѕ РІР·РґРѕС…РѕРј РЅР°РіР»Рѕ РЅР°С‡РёРЅР°РµС‚ РїРѕР»РёРІР°С‚СЊ РїРѕР» СЃС‚СЂСѓС‘Р№ С‡РёСЃС‚РѕР№ РјРѕС‡Рё, РЅРµ Р·Р°Р±РѕС‚СЏСЃСЊ РЅРё Рѕ С‡С‘Рј, РІСЃС‘ РµС‰С‘ РїРѕР»РЅРѕСЃС‚СЊСЋ РЅР° РІРёРґСѓ Рё РѕСЃРѕР·РЅР°РІР°СЏ РІР°С€Рµ РїСЂРёСЃСѓС‚СЃС‚РІРёРµ
+
+*Р’Р—Р”РћРҐ*
+
+РџСЃСЃСЃСЃСЃ
+
+РџСЃСЃСЃ
+
+РћРЅР° РїРёСЃРёР»Р°, РєР°Р·Р°Р»РѕСЃСЊ, С†РµР»СѓСЋ РІРµС‡РЅРѕСЃС‚СЊ, РїРѕРєР° РІС‹ СЃ Р±Р»Р°РіРѕРіРѕРІРµРЅРёРµРј СЃРјРѕС‚СЂРёС‚Рµ, РЅР°РґСѓС‚С‹Р№ РїСѓР·С‹СЂСЊ РјРµРґР»РµРЅРЅРѕ СЃРґСѓРІР°РµС‚СЃСЏ, РѕР±Р»РµРіС‡РµРЅРёРµ РѕРјС‹РІР°РµС‚ РµС‘ Р»РёС†Рѕ
+
+РџСЃСЃСЃСЃ
+
+Р’СЃРєРѕСЂРµ РІРµР»РёРєРѕР»РµРїРЅРѕРµ Р·СЂРµР»РёС‰Рµ РїРѕРґС…РѕРґРёС‚ Рє РєРѕРЅС†Сѓ, РµС‘ РїРёСЃСЊРєР° РІСЃС‘ РµС‰С‘ РєР°РїР°РµС‚, РєРѕРіРґР° РѕРЅР° РїРѕРІРѕСЂР°С‡РёРІР°РµС‚СЃСЏ Рє РІР°Рј СЃ СѓР»С‹Р±РєРѕР№
+
+В«Р“РѕСЂР°Р·РґРѕ Р»СѓС‡С€Рµ, Р°РїРµР»СЊСЃРёРЅРѕРІС‹Р№ СЃРѕРє РІС‡РµСЂР° РІРµС‡РµСЂРѕРј Р±С‹Р» СЃР»РёС€РєРѕРј Р±РѕР»СЊС€РёРј, РїРѕС‡РµРјСѓ РІС‹ РѕСЃС‚Р°РЅРѕРІРёР»Рё РјРѕРµРіРѕ РіРѕСЃРїРѕРґРёРЅР°, РґР°РІР°Р№С‚Рµ РїСЂРѕРґРѕР»Р¶РёРјВ» (РђРјР°РЅРґР°)
+
+РћРЅР° РЅР°С‡РёРЅР°РµС‚ РёРґС‚Рё, Р° РјРѕС‡Р° РІСЃС‘ РµС‰С‘ РєР°РїР°РµС‚ РїРѕ РµС‘ РЅРѕРіР°Рј, РЅР° РµС‘ Р»РёС†Рµ СЂР°РґРѕСЃС‚РЅР°СЏ СѓР»С‹Р±РєР°
+
+В«Р”Р°, РїРѕС€Р»РёВ»
+
+РћС€РµР»РѕРјР»С‘РЅРЅС‹Р№ С‚РµРј, С‡С‚Рѕ С‚С‹ С‚РѕР»СЊРєРѕ С‡С‚Рѕ СѓРІРёРґРµР», РјРѕС‘ СЃР°РјРѕРµ Р±РѕР»СЊС€РѕРµ Р¶РµР»Р°РЅРёРµ СѓРІРёРґРµС‚СЊ, РєР°Рє Р¶РµРЅС‰РёРЅР° СЃ РїРѕР»РЅС‹Рј РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј РїРёСЃР°РµС‚, С‚РѕР»СЊРєРѕ С‡С‚Рѕ СЃР±С‹Р»РѕСЃСЊ, Рё РѕРЅР° РїСЂРѕСЃС‚Рѕ РѕС‚РјР°С…РЅСѓР»Р°СЃСЊ, РєР°Рє Р±СѓРґС‚Рѕ РЅРёС‡РµРіРѕ РЅРµ РїСЂРѕРёСЃС…РѕРґРёС‚, С‡С‚Рѕ РїСЂРѕРёСЃС…РѕРґРёС‚, СЏ СЃРїР»СЋ? Р•СЃР»Рё С‚Р°Рє, С‚Рѕ СЏ РЅРµ С…РѕС‡Сѓ РїСЂРѕСЃС‹РїР°С‚СЊСЃСЏ
+
+Р’С‹ РїСЂРѕРґРѕР»Р¶Р°РµС‚Рµ СЃР»РµРґРѕРІР°С‚СЊ Р·Р° РЅРµР№, РїРѕР»РЅРѕСЃС‚СЊСЋ РїРѕС‚РµСЂСЏРІС€РёСЃСЊ РІ СЃРІРѕРёС… РјС‹СЃР»СЏС…, РЅРµ РѕСЃРѕР·РЅР°РІР°СЏ РїСЂРѕРёСЃС…РѕРґСЏС‰РµРіРѕ РІРѕРєСЂСѓРі, РІСЃРїРѕРјРёРЅР°СЏ РІРѕРґРѕРїР°Рґ РјРѕС‡Рё Рё РµС‘ СЃРґСѓРІР°СЋС‰РёР№СЃСЏ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ вЂ” Р·СЂРµР»РёС‰Рµ, РєРѕС‚РѕСЂРѕРµ СЃС‚РѕРёС‚ СѓРІРёРґРµС‚СЊ
+
+В«РЇ РЅРµ РїРѕРЅРёРјР°СЋ, С‡С‚Рѕ РїСЂРѕРёСЃС…РѕРґРёС‚, РЅРѕ РјРЅРµ СЌС‚Рѕ РЅСЂР°РІРёС‚СЃСЏВ»
+
+Р’С‹ С€РµРїС‡РµС‚Рµ СЃРµР±Рµ, РїСЂРѕРґРѕР»Р¶Р°СЏ РёРґС‚Рё РїРѕ РєРѕСЂРёРґРѕСЂСѓ, СЂР°Р·РјС‹С€Р»СЏСЏ Рѕ С‚РѕРј, С‡С‚Рѕ РіРѕС‚РѕРІРёС‚ Р±СѓРґСѓС‰РµРµ.
+
+###
+
+РќР° СЌС‚РѕРј РїРѕРєР° РІСЃС‘, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, СЃРєР°Р¶РёС‚Рµ РјРЅРµ, С‡С‚Рѕ РјРЅРµ СЃР»РµРґСѓРµС‚ СѓР»СѓС‡С€РёС‚СЊ Рё С‡С‚Рѕ РґРѕР±Р°РІРёС‚СЊ. РўР°РєР¶Рµ, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, РїСЂРµРґР»РѕР¶РёС‚Рµ РЅР°Р·РІР°РЅРёСЏ РґР»СЏ РёСЃС‚РѕСЂРёРё, РµСЃР»Рё Сѓ РІР°СЃ РµСЃС‚СЊ Р»СѓС‡С€РёРµ РЅР° РїСЂРёРјРµС‚Рµ.
 
 *003*2024-07-22 11:14
 
-{{12 часов назад, warham1995 сказал:
+{{12 С‡Р°СЃРѕРІ РЅР°Р·Р°Рґ, warham1995 СЃРєР°Р·Р°Р»:
 
-Мне нравится предпосылка, мне интересно почитать больше. Будет ли удерживание мочи символом статуса, методом поиска любви или признания в ней кому-то или соблазнением, которым женщина пытается заставить человека, который ей нравится, заметить её ухаживания?
-
-}}
-
-Определённо, моя идея была в мире, где свободное мочеиспускание считается нормальным, как в историях здесь, например, в Советской республике, но поскольку мир построен на этом здравом смысле, наличие большого мочевого пузыря рассматривается как символ статуса, особенно среди женщин, я дал краткий обзор этого в прологе, где две девушки борются со своим мочевым пузырём, чтобы увидеть, кто достоин, когда людям приходится что-то решать, особенно женщинам, может быть, иногда мужчинам (не знаю, могу ли я напис%ть о хорошем мужском мочеиспускании), соревнования по проведению соревнований достаточно распространены, чтобы происходить на улицах, также одежда эволюционировала соответствующим образом, чтобы приспособиться к этой практике, отсюда и отсутствие трусиков. Размер мочевого пузыря и его способность удерживать — это формы отдыха, которые делаются ради развлечения или соревнования, по крайней мере, пока, таков план
-
-Мне также нравится идея привлечения внимания мужчин, демонстрируя размер или объём мочевого пузыря, спасибо, включу это в историю
-
-{{6 часов назад, Temple сказал:
-
-Надёжное начало для действительно хорошей предпосылки. В качестве одного из улучшений можно рассмотреть возможность появления имени персонажа перед его диалогом, а не наоборот, чтобы сделать историю более понятной, но это на самом деле просто придирка. В целом, продолжайте в том же духе!
+РњРЅРµ РЅСЂР°РІРёС‚СЃСЏ РїСЂРµРґРїРѕСЃС‹Р»РєР°, РјРЅРµ РёРЅС‚РµСЂРµСЃРЅРѕ РїРѕС‡РёС‚Р°С‚СЊ Р±РѕР»СЊС€Рµ. Р‘СѓРґРµС‚ Р»Рё СѓРґРµСЂР¶РёРІР°РЅРёРµ РјРѕС‡Рё СЃРёРјРІРѕР»РѕРј СЃС‚Р°С‚СѓСЃР°, РјРµС‚РѕРґРѕРј РїРѕРёСЃРєР° Р»СЋР±РІРё РёР»Рё РїСЂРёР·РЅР°РЅРёСЏ РІ РЅРµР№ РєРѕРјСѓ-С‚Рѕ РёР»Рё СЃРѕР±Р»Р°Р·РЅРµРЅРёРµРј, РєРѕС‚РѕСЂС‹Рј Р¶РµРЅС‰РёРЅР° РїС‹С‚Р°РµС‚СЃСЏ Р·Р°СЃС‚Р°РІРёС‚СЊ С‡РµР»РѕРІРµРєР°, РєРѕС‚РѕСЂС‹Р№ РµР№ РЅСЂР°РІРёС‚СЃСЏ, Р·Р°РјРµС‚РёС‚СЊ РµС‘ СѓС…Р°Р¶РёРІР°РЅРёСЏ?
 
 }}
 
-Спасибо, буду иметь это в виду
+РћРїСЂРµРґРµР»С‘РЅРЅРѕ, РјРѕСЏ РёРґРµСЏ Р±С‹Р»Р° РІ РјРёСЂРµ, РіРґРµ СЃРІРѕР±РѕРґРЅРѕРµ РјРѕС‡РµРёСЃРїСѓСЃРєР°РЅРёРµ СЃС‡РёС‚Р°РµС‚СЃСЏ РЅРѕСЂРјР°Р»СЊРЅС‹Рј, РєР°Рє РІ РёСЃС‚РѕСЂРёСЏС… Р·РґРµСЃСЊ, РЅР°РїСЂРёРјРµСЂ, РІ РЎРѕРІРµС‚СЃРєРѕР№ СЂРµСЃРїСѓР±Р»РёРєРµ, РЅРѕ РїРѕСЃРєРѕР»СЊРєСѓ РјРёСЂ РїРѕСЃС‚СЂРѕРµРЅ РЅР° СЌС‚РѕРј Р·РґСЂР°РІРѕРј СЃРјС‹СЃР»Рµ, РЅР°Р»РёС‡РёРµ Р±РѕР»СЊС€РѕРіРѕ РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ СЂР°СЃСЃРјР°С‚СЂРёРІР°РµС‚СЃСЏ РєР°Рє СЃРёРјРІРѕР» СЃС‚Р°С‚СѓСЃР°, РѕСЃРѕР±РµРЅРЅРѕ СЃСЂРµРґРё Р¶РµРЅС‰РёРЅ, СЏ РґР°Р» РєСЂР°С‚РєРёР№ РѕР±Р·РѕСЂ СЌС‚РѕРіРѕ РІ РїСЂРѕР»РѕРіРµ, РіРґРµ РґРІРµ РґРµРІСѓС€РєРё Р±РѕСЂСЋС‚СЃСЏ СЃРѕ СЃРІРѕРёРј РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј, С‡С‚РѕР±С‹ СѓРІРёРґРµС‚СЊ, РєС‚Рѕ РґРѕСЃС‚РѕРёРЅ, РєРѕРіРґР° Р»СЋРґСЏРј РїСЂРёС…РѕРґРёС‚СЃСЏ С‡С‚Рѕ-С‚Рѕ СЂРµС€Р°С‚СЊ, РѕСЃРѕР±РµРЅРЅРѕ Р¶РµРЅС‰РёРЅР°Рј, РјРѕР¶РµС‚ Р±С‹С‚СЊ, РёРЅРѕРіРґР° РјСѓР¶С‡РёРЅР°Рј (РЅРµ Р·РЅР°СЋ, РјРѕРіСѓ Р»Рё СЏ РЅР°РїРёСЃ%С‚СЊ Рѕ С…РѕСЂРѕС€РµРј РјСѓР¶СЃРєРѕРј РјРѕС‡РµРёСЃРїСѓСЃРєР°РЅРёРё), СЃРѕСЂРµРІРЅРѕРІР°РЅРёСЏ РїРѕ РїСЂРѕРІРµРґРµРЅРёСЋ СЃРѕСЂРµРІРЅРѕРІР°РЅРёР№ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ СЂР°СЃРїСЂРѕСЃС‚СЂР°РЅРµРЅС‹, С‡С‚РѕР±С‹ РїСЂРѕРёСЃС…РѕРґРёС‚СЊ РЅР° СѓР»РёС†Р°С…, С‚Р°РєР¶Рµ РѕРґРµР¶РґР° СЌРІРѕР»СЋС†РёРѕРЅРёСЂРѕРІР°Р»Р° СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РёРј РѕР±СЂР°Р·РѕРј, С‡С‚РѕР±С‹ РїСЂРёСЃРїРѕСЃРѕР±РёС‚СЊСЃСЏ Рє СЌС‚РѕР№ РїСЂР°РєС‚РёРєРµ, РѕС‚СЃСЋРґР° Рё РѕС‚СЃСѓС‚СЃС‚РІРёРµ С‚СЂСѓСЃРёРєРѕРІ. Р Р°Р·РјРµСЂ РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ Рё РµРіРѕ СЃРїРѕСЃРѕР±РЅРѕСЃС‚СЊ СѓРґРµСЂР¶РёРІР°С‚СЊ вЂ” СЌС‚Рѕ С„РѕСЂРјС‹ РѕС‚РґС‹С…Р°, РєРѕС‚РѕСЂС‹Рµ РґРµР»Р°СЋС‚СЃСЏ СЂР°РґРё СЂР°Р·РІР»РµС‡РµРЅРёСЏ РёР»Рё СЃРѕСЂРµРІРЅРѕРІР°РЅРёСЏ, РїРѕ РєСЂР°Р№РЅРµР№ РјРµСЂРµ, РїРѕРєР°, С‚Р°РєРѕРІ РїР»Р°РЅ
+
+РњРЅРµ С‚Р°РєР¶Рµ РЅСЂР°РІРёС‚СЃСЏ РёРґРµСЏ РїСЂРёРІР»РµС‡РµРЅРёСЏ РІРЅРёРјР°РЅРёСЏ РјСѓР¶С‡РёРЅ, РґРµРјРѕРЅСЃС‚СЂРёСЂСѓСЏ СЂР°Р·РјРµСЂ РёР»Рё РѕР±СЉС‘Рј РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ, СЃРїР°СЃРёР±Рѕ, РІРєР»СЋС‡Сѓ СЌС‚Рѕ РІ РёСЃС‚РѕСЂРёСЋ
+
+{{6 С‡Р°СЃРѕРІ РЅР°Р·Р°Рґ, Temple СЃРєР°Р·Р°Р»:
+
+РќР°РґС‘Р¶РЅРѕРµ РЅР°С‡Р°Р»Рѕ РґР»СЏ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ С…РѕСЂРѕС€РµР№ РїСЂРµРґРїРѕСЃС‹Р»РєРё. Р’ РєР°С‡РµСЃС‚РІРµ РѕРґРЅРѕРіРѕ РёР· СѓР»СѓС‡С€РµРЅРёР№ РјРѕР¶РЅРѕ СЂР°СЃСЃРјРѕС‚СЂРµС‚СЊ РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ РїРѕСЏРІР»РµРЅРёСЏ РёРјРµРЅРё РїРµСЂСЃРѕРЅР°Р¶Р° РїРµСЂРµРґ РµРіРѕ РґРёР°Р»РѕРіРѕРј, Р° РЅРµ РЅР°РѕР±РѕСЂРѕС‚, С‡С‚РѕР±С‹ СЃРґРµР»Р°С‚СЊ РёСЃС‚РѕСЂРёСЋ Р±РѕР»РµРµ РїРѕРЅСЏС‚РЅРѕР№, РЅРѕ СЌС‚Рѕ РЅР° СЃР°РјРѕРј РґРµР»Рµ РїСЂРѕСЃС‚Рѕ РїСЂРёРґРёСЂРєР°. Р’ С†РµР»РѕРј, РїСЂРѕРґРѕР»Р¶Р°Р№С‚Рµ РІ С‚РѕРј Р¶Рµ РґСѓС…Рµ!
+
+}}
+
+РЎРїР°СЃРёР±Рѕ, Р±СѓРґСѓ РёРјРµС‚СЊ СЌС‚Рѕ РІ РІРёРґСѓ
 
