--- a/XxAbthedevxX/103194-the-golden-puddle-a-medieval-adventure-of-unrestricted-release/rus.textile
+++ b/XxAbthedevxX/103194-the-golden-puddle-a-medieval-adventure-of-unrestricted-release/rus.textile
@@ -1,4 +1,4 @@
-The Golden Puddle: A Medieval Adventure of Unrestricted Release
+Золотая лужа: средневековое приключение без ограничений
 
 Автор: XxAbthedevxX
 
